Added artifactory snippet

--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -26,4 +26,11 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>rhel73test-snapshots</name>
+        <url>http://rhel73test:8081/artifactory/libs-snapshot</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
