--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
     agent any
+    tools{
+			maven 'myMaven-3'
+			jdk 'myJDK-1.8'
+			git 'git'
+		 }
     stages {
         stage('Example Build') {
             when { branch 'master' }
