add include(*.war) method

--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -16,16 +16,17 @@ pipeline {
             when { branch 'master' }
             steps {
                 echo '2. Load to Artifactory'
-              
-					script {
-						def server = Artifactory.server('my_artifactory')
-						def rtMaven = Artifactory.newMavenBuild()
-						rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
-						rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
-						rtMaven.tool = 'myMaven-3'
-						def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'install'
-						server.publishBuildInfo buildInfo
-					}
+				script {
+					def server = Artifactory.server('my_artifactory')
+					def rtMaven = Artifactory.newMavenBuild()
+					rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+					rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+					rtMaven.tool = 'myMaven-3'
+					rtMaven.deployer.artifactDeploymentPatterns.addInclude("*.war")
+					
+					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install'
+					server.publishBuildInfo buildInfo
+				}
 				
             }
         }
