added dependencies to pom

--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -16,6 +16,13 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
+        <dependencies>
+	        <dependency>
+	    		<groupId>org.apache.maven</groupId>
+	    		<artifactId>maven-model</artifactId>
+	    		<version>3.0</version>
+			</dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
@@ -24,6 +31,7 @@
           <warSourceDirectory>WebContent</warSourceDirectory>
         </configuration>
       </plugin>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-model -->
     </plugins>
   </build>
   <distributionManagement>
