--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -10,6 +10,7 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
@@ -20,11 +21,17 @@
 	        <dependency>
 	    		<groupId>org.apache.maven</groupId>
 	    		<artifactId>maven-model</artifactId>
-	    		<version>3.0</version>
+	    		<version>3.5.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.maven</groupId>
+			    <artifactId>maven-repository-metadata</artifactId>
+			    <version>3.5.0</version>
 			</dependency>
         </dependencies>
       </plugin>
       <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
