--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -28,6 +28,12 @@
 			    <artifactId>maven-repository-metadata</artifactId>
 			    <version>3.5.0</version>
 			</dependency>
+			    <dependency>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-surefire-plugin</artifactId>
+			      <version>3.0.0-M1</version>
+      			  <type>maven-plugin</type>
+    			</dependency>
         </dependencies>
       </plugin>
       <plugin>
