--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -31,7 +31,7 @@
 			    <dependency>
 			      <groupId>org.apache.maven.plugins</groupId>
 			      <artifactId>maven-surefire-plugin</artifactId>
-			      <version>3.0.0-M1</version>
+			      <version>2.12.4</version>
       			  <type>maven-plugin</type>
     			</dependency>
         </dependencies>
