--- a/vladwebtest/pom.xml
+++ b/vladwebtest/pom.xml
@@ -28,13 +28,15 @@
 			    <artifactId>maven-repository-metadata</artifactId>
 			    <version>3.5.0</version>
 			</dependency>
-			    <dependency>
-			      <groupId>org.apache.maven.plugins</groupId>
-			      <artifactId>maven-surefire-plugin</artifactId>
-			      <version>2.12.4</version>
-      			  <type>maven-plugin</type>
-    			</dependency>
-        </dependencies>
+	  </dependencies>
+      </plugin>
+      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>2.12.4</version>
+	        <configuration>
+	          <skipTests>true</skipTests>
+	        </configuration>
       </plugin>
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
