Added dev* processing into Jenkins file

--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -3,7 +3,23 @@ pipeline {
     tools{
 			maven 'myMaven-3'
 			jdk 'myJDK-1.8'
-		 }  
+		 } 
+	stages{
+		stage('Build') {
+            when { branch 'dev*' }
+            steps {
+                echo '1. Build'
+                sh 'echo "Build for $BRANCH"'
+            }
+        }
+        stage('Artifactory') {
+            when { branch 'dev*' }
+            steps {
+                echo '2. Load to Artifactory'
+                sh 'echo "Artifactory for $BRANCH"'
+            }
+        }
+	} 
     stages {
         stage('Build') {
             when { branch 'master' }
