--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -20,14 +20,23 @@ pipeline {
             }
         }
 	   stage('Build Master') {
-            when { branch 'master' }
+            when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
             steps {
-                echo '1. Build for $BRANCH_NAME'
-                sh 'mvn clean package -f $WORKSPACE/vladwebtest/pom.xml'
+            	try {
+            		notifyBuild('STARTED')
+	                echo '1. Build for $BRANCH_NAME'
+	                sh 'mvn clean package -f $WORKSPACE/vladwebtest/pom.xml'
+	            catch(e) {
+	            	currentBuild.result = "FAILED"
+            		throw e
+	            }
+	            finally {
+	            	notifyBuild(currentBuild.result)
+	            }
             }
         }
         stage('Artifactory master') {
-            when { branch 'master' }
+           when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
             steps {
                 echo '2. Load to Artifactory for $BRANCH_NAME'
 				script {
@@ -45,4 +54,35 @@ pipeline {
             }
         }
     }
-}    
+}   
+
+def notifyBuild(String buildStatus = 'STARTED') {
+  // build status of null means successful
+  buildStatus = buildStatus ?: 'SUCCESS'
+
+  // Default values
+  def colorName = 'RED'
+  def colorCode = '#FF0000'
+  def subject = "${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
+  def summary = "${subject} (${env.BUILD_URL})"
+  def details = """<p>STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+    <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
+
+  // Override default values based on build status
+  if (buildStatus == 'STARTED') {
+    color = 'YELLOW'
+    colorCode = '#FFFF00'
+  } else if (buildStatus == 'SUCCESS') {
+    color = 'GREEN'
+    colorCode = '#00FF00'
+  } else {
+    color = 'RED'
+    colorCode = '#FF0000'
+  }
+
+  emailext (
+      subject: subject,
+      body: details,
+      recipientProviders: [[$class: 'DevelopersRecipientProvider']]
+    )
+}
