--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -29,9 +29,9 @@ pipeline {
 		                echo '1. Build for $BRANCH_NAME'
 		                sh 'mvn clean package -f $WORKSPACE/vladwebtest/pom.xml'
 		            }
-		            catch(e) {
+		            catch(e1) {
 		            	currentBuild.result = "FAILED"
-	            		throw e
+	            		throw e1
 		            }
 		            finally {
 		            	notifyBuild(currentBuild.result)
