change message details

--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -24,14 +24,13 @@ pipeline {
             steps {
             	script {
 	            	try {
-	            		sh 'echo "NotifyBuild call"'
 	            		notifyBuild('STARTED')
 		                echo '1. Build for $BRANCH_NAME'
 		                sh 'mvn clean package -f $WORKSPACE/vladwebtest/pom.xml'
 		            }
-		            catch(e1) {
+		            catch(e) {
 		            	currentBuild.result = "FAILED"
-	            		throw e1
+	            		throw e
 		            }
 		            finally {
 		            	notifyBuild(currentBuild.result)
@@ -62,33 +61,37 @@ pipeline {
 
 def notifyBuild(String buildStatus = 'STARTED') {
   // build status of null means successful
-  buildStatus = buildStatus ?: 'SUCCESS'
+  // x ? x : y
+  //buildStatus = buildStatus ?: 'SUCCESS'
   
-  sh 'echo "Inside function"'
-
   // Default values
   def colorName = 'RED'
   def colorCode = '#FF0000'
   def subject = "${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
   def summary = "${subject} (${env.BUILD_URL})"
-  def details = """<p>STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-    <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
+  def details 
 
   // Override default values based on build status
   if (buildStatus == 'STARTED') {
     color = 'YELLOW'
     colorCode = '#FFFF00'
+    details= """<p>STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+    	<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
   } else if (buildStatus == 'SUCCESS') {
     color = 'GREEN'
     colorCode = '#00FF00'
+    details= """<p>SUCCESS: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+    	<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
   } else {
     color = 'RED'
     colorCode = '#FF0000'
+    details== """<p>FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+    	<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
   }
 
   emailext (
       subject: subject,
       body: details,
-      recipientProviders: [[$class: 'DevelopersRecipientProvider'],[$class: 'RequesterRecipientProvider']]
+      recipientProviders: [[$class: 'RequesterRecipientProvider']]
     )
 }
