--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
             }
             post {
 		        always {
-		            sh "echo 'Build $BUILD_NUMBER for $BRANCH_NAME'comleted!"
+		            sh "echo 'Build $BUILD_NUMBER for branch $BRANCH_NAME' completed!"
 		        }
 		        success {
 		            notifyBuild('SUCCESS')
