--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -50,10 +50,12 @@ pipeline {
            when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
             steps {
 				script {
-					notifyBuild('STARTED')
-		            sh "echo 'Artifactory stage for build # $BUILD_NUMBER to ${agentName}'"
 					def server = Artifactory.server('my_artifactory')
 					def rtMaven = Artifactory.newMavenBuild()
+					
+					notifyBuild('STARTED')
+		            sh "echo 'Artifactory stage for build # $BUILD_NUMBER to '+rtMaven.agentName"
+					
 					rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
 					rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
 					rtMaven.tool = 'myMaven-3'
