--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -63,6 +63,7 @@ pipeline {
 					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
 					sh "echo '"+buildInfo.name+"'"
 					sh "echo '"+buildInfo.number+"'"
+					sh "echo '"+buildInfo.URL+"'"
 					server.publishBuildInfo buildInfo
 				}
 				
