--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -64,8 +64,7 @@ pipeline {
 					sh "echo '*********************************'"
 					sh "echo '"+buildInfo.name+"'"
 					sh "echo '"+buildInfo.number+"'"
-					
-					sh "echo '"+buildInfo.url+"'"
+					sh "echo '"+server.url+"'"
 					sh "echo '"+buildInfo.started+"'"
 					sh "echo '*********************************'"
 					server.publishBuildInfo buildInfo
