--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -52,21 +52,14 @@ pipeline {
 				script {
 					def server = Artifactory.server('my_artifactory')
 					def rtMaven = Artifactory.newMavenBuild()
-					
 					notifyBuild('STARTED')
-		            sh "echo 'Artifactory stage for build # $BUILD_NUMBER to '"
+		            sh "echo 'Artifactory stage for build # '+buildInfo.number+"'""
 					rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
 					rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
 					rtMaven.tool = 'myMaven-3'
 					rtMaven.deployer.artifactDeploymentPatterns.addInclude("*.war")
 					
 					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
-					sh "echo '*********************************'"
-					sh "echo '"+buildInfo.name+"'"
-					sh "echo '"+buildInfo.number+"'"
-					sh "echo '"+server.url+"'"
-					sh "echo '"+buildInfo.started+"'"
-					sh "echo '*********************************'"
 					server.publishBuildInfo buildInfo
 				}
 				
@@ -77,6 +70,8 @@ pipeline {
 		        }
 		        success {
 		            notifyBuild('SUCCESS')
+		            sh 'echo "Build "+buildInfo.number+" was successfully deployed. Browse it in Artifactory under <a href='"+server.url+ "webapp/builds/"+buildInfo.name
+		             + "/"+buildInfo.number+"'>"		        
 		        }
 		        unstable {
 		            notifyBuild('UNSTABLE')
