--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
 					def server = Artifactory.server('my_artifactory')
 					def rtMaven = Artifactory.newMavenBuild()
 					notifyBuild('STARTED')
-		            sh "echo 'Artifactory stage for build # '+buildInfo.number+"'""
+		            sh "echo 'Artifactory stage for build # '+buildInfo.number+'''"
 					rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
 					rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
 					rtMaven.tool = 'myMaven-3'
