--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -61,8 +61,8 @@ pipeline {
 					
 					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
 					message="Build "+buildInfo.number+" was successfully deployed. Browse it in Artifactory under <a href='"+server.url+ \
-					"webapp/builds/"+buildInfo.name + "/"+buildInfo.number+"'>"
-					sh 'echo "'+message+'"'
+					"webapp/builds/"+buildInfo.name + "/"+buildInfo.number+"'/>"
+					sh "echo " +'''+message+'''"
 					server.publishBuildInfo buildInfo
 				}
 				
