--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -60,9 +60,11 @@ pipeline {
 					rtMaven.deployer.artifactDeploymentPatterns.addInclude("*.war")
 					
 					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
+					
 					message="Build "+buildInfo.number+" was successfully deployed. Browse it in Artifactory under <a href='"+server.url+ \
 					"webapp/builds/"+buildInfo.name + "/"+buildInfo.number+"'/>"
-					sh "echo " +'''+message+'''"
+					sh "echo ':'+buildInfo.number+'''"
+					
 					server.publishBuildInfo buildInfo
 				}
 				
