--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -68,7 +68,7 @@ pipeline {
 					message=server.url+"webapp/builds/"+buildInfo.name + "/"+buildInfo.number
 										
 					env.artifactory_success_message = message 
-					sh "echo message"
+					sh "echo $message"
 					sh "echo ${env.artifactory_success_message}"
 					
 					server.publishBuildInfo buildInfo
