--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -4,9 +4,6 @@ pipeline {
 			maven 'myMaven-3'
 			jdk 'myJDK-1.8'
 		 } 
-	environment {
-        artifactory_success_message='kuku'
-    }
 	stages{
 		stage('Build Dev') {
             when { branch 'dev*' }
@@ -50,53 +47,40 @@ pipeline {
     		}    
         }
         stage('Artifactory master') {
-           when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
+            when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
             steps {
-				script {
-					def server = Artifactory.server('my_artifactory')
-					def rtMaven = Artifactory.newMavenBuild()
-					
-					notifyBuild('STARTED','ARTIFACTORY')
-		           
-		           	rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
-					rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
-					rtMaven.tool = 'myMaven-3'
-					rtMaven.deployer.artifactDeploymentPatterns.addInclude("*.war")
-					
-					def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
-										
-					def message=server.url+"/webapp/builds/"+buildInfo.name + "/"+buildInfo.number
-										
-					env.artifactory_success_message = message 
-					sh "echo $message"
-					sh "echo ${env.artifactory_success_message}"
-					
-					server.publishBuildInfo buildInfo
-				}
-				
-            }
-            post {
-		        always {
-		            sh "echo 'Upload build # $BUILD_NUMBER for branch $BRANCH_NAME' completed!"
-		        }
-		        success {
-		            notifyBuild('SUCCESS','ARTIFACTORY') 	        
-		        }
-		        unstable {
-		            notifyBuild('UNSTABLE')
-		        }
-		        failure {
-		            notifyBuild('FAILURE','ARTIFACTORY')
-		        }
-		        changed {
-		            notifyBuild('CHANGED')
-		        }
-    		} 
+            	try {
+	    			notifyBuild('STARTED','ARTIFACTORY')
+	
+	   				script {
+						def server = Artifactory.server('my_artifactory')
+						def rtMaven = Artifactory.newMavenBuild()
+								           
+			           	rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+						rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+						rtMaven.tool = 'myMaven-3'
+						rtMaven.deployer.artifactDeploymentPatterns.addInclude("*.war")
+						
+						def buildInfo = rtMaven.run pom: '$WORKSPACE/vladwebtest/pom.xml', goals: 'clean install -U -Dmaven.test.skip=true'
+																			
+						server.publishBuildInfo buildInfo
+						
+						def message=server.url+"/webapp/builds/"+buildInfo.name + "/"+buildInfo.number
+						
+						notifyBuild('SUCCESS','ARTIFACTORY', message) 	
+					}
+	   			} 
+	   			catch (e) {
+				    currentBuild.result = "FAILED"
+				   	notifyBuild('FAILURE','ARTIFACTORY')
+				    throw e
+			  	}
+			}
         }
     }
 }   
 
-def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD') {
+def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String param1='') {
   // Default values
   def colorName = 'RED'
   def colorCode = '#FF0000'
@@ -123,7 +107,7 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD') {
     		<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
     } else if (step=='ARTIFACTORY'){
     	details= """<p>Build '${env.JOB_NAME} [${env.BUILD_NUMBER}] was successfully deployed to Artifactory.':</p>
-    		<p>Browse it in Artifactory under &QUOT;<a href='${env.artifactory_success_message}'></a>&QUOT;</p>"""
+    		<p>Browse it in Artifactory, using &QUOT;<a href='$param1'>this link</a>&QUOT;</p>"""
     }
   } else if (buildStatus == 'UNSTABLE') {
     color = 'BLUE'
